--- a/src/templates/pay_success.html
+++ b/src/templates/pay_success.html
@@ -35,7 +35,7 @@
             <span class="textSc text-green-600">پرداخت با موفقیت انجام شد</span>
             <span
                     class="backDsh cursor-pointer bg-sky-700 p-4 text-slate-200 rounded-md"
-            >          <a href="/">
+            >          <a href="https://standards.ncp3.xyz/standards">
 
             بازگشت به داشبورد
           </a></span
