--- a/src/templates/pay_not_success.html
+++ b/src/templates/pay_not_success.html
@@ -8,10 +8,10 @@
 <!--            href="{{ url_for('static', path='css/login_style.css') }}"-->
 <!--    />-->
     <link href="../static/css/login_style.css" rel="stylesheet"/>
-    <script src="{{ url_for('static', path='./app.js') }}"></script>
+    <script src="../static/app.js"></script>
     <link
             rel="stylesheet"
-            href="{{ url_for('static', path='font/font.css') }}"
+            href="../static/font/font.css"
     />
     <title>پرداخت نا موفق</title>
 </head>
