--- a/src/templates/pay_success.html
+++ b/src/templates/pay_success.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="{{ url_for('static', path='./app.js') }}"></script>
+    <link href="../static/css/login_style.css" rel="stylesheet"/>
+    <script src="../static/app.js"></script>
     <link
             rel="stylesheet"
-            href="{{ url_for('static', path='css/login_style.css') }}"
-    />
-    <link
-            rel="stylesheet"
-            href="{{ url_for('static', path='font/font.css') }}"
+            href="../static/font/font.css"
     />
     <title>پرداخت موفق</title>
 </head>
